# trabalho-1-jopefd

./: CMakeLists.txt  README.md  author.md  forca
arquivos/: palavras.txt  scores.txt
include/: forca.hpp
source/: forca.cpp  main.cpp
